namespace go network

struct ClientID{
    1:string Address;
    2:string Id ;
}